k8s/overlays/staging/patches/backend-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  type: LoadBalancer
